Use mets.xsd and xlink.xsd from Kitodo schemata directory.